add teams and venues to results response
